ソースコードを複数ファイルに分割

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 VRCHAT_USERNAME =
 VRCHAT_PASSWORD =
 VRChat_USER_AGENT = "VRCFriendWatch/1.0 (+contact: you@example.com)"
+VRCHAT_ALLOW_STDIN_OTP=1
+VRCHAT_2FA_PREFERRED=EMAIL
+#VRCHAT_TOTP_SECRET=
