--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-python-dotenv>=1.0
-requests>=2.31
-websocket-client>=1.6
-pyotp>=2.9
-win11toast>=0.31; sys_platform == "win32"
+colorama
+requests
+pyotp
+python-dotenv
+websocket-client
+win11toast; platform_system == "Windows"
